src/main/default/objects/BotError__c/BotError__c.object-meta.xml
<CustomObject>
    <description>Stores errors happened when using the package</description>
    <label>Error</label>
    <nameField>
        <displayFormat>BE-{000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>