src/main/default/objects/BotError__c/fields/Bot__c.field-meta.xml
<CustomField>
    <fullName>Bot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A bot that produced the error</description>
    <label>Bot</label>
    <referenceTo>Bot__c</referenceTo>
    <relationshipLabel>Errors</relationshipLabel>
    <relationshipName>Errors</relationshipName>
    <type>Lookup</type>
</CustomField>