src/main/default/objects/BotError__c/fields/ExceptionType__c.field-meta.xml
<CustomField>
    <fullName>ExceptionType__c</fullName>
    <description>Apex type of the thrown exception</description>
    <label>Exception Type</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>