src/main/default/objects/BotError__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Bot__c</columns>
    <columns>Message__c</columns>
    <columns>ExceptionType__c</columns>
    <columns>StackTrace__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>